# pc_clinet

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  项目文档.md
.gitee/workflows/: build-desktop.yml
.github/workflows/: build-desktop.yml
docs/: gitee-github-mirror.md
python-backend/: .gitignore  aitoreder-backend.spec  app.py  requirements.txt
python-backend/services/: __init__.py  audio_utils.py  tts_service.py  voice_clone_service.py
scripts/: release.sh
scripts/ci/: build_desktop.ps1  build_desktop.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  file_manager.rs  lib.rs  main.rs  python_service.rs  state.rs
src/api/: tauri.ts
src/components/: AudioPlayer.vue  CloneVoicePanel.vue  TaskList.vue  TextInputPanel.vue  VoiceSelector.vue
src/stores/: settings.ts  tts.ts  voices.ts
