[package]
name = "ai_toreder"
version = "0.1.0"
description = "Local desktop TTS workbench powered by Tauri + Rust + Python"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "ai_toreder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
